# SLAM

./: CMakeLists.txt  README.md  custom_lidar_node.cpp  debug.ino  motors.ino  package.xml
.claude/: settings.local.json
config/: ekf_params.yaml  slam_toolbox_params.yaml
debug/: debug.ino
firmware_scripts/: calibrate_encoder.ino  debug.ino  debug_odometry.ino
launch/: slam_bot.launch.py
learnings/: commands.md  differential_drive_kinematics.md  ekf.md  encoder slip tackling.md  encoders for SLAM.md  gyro_calibration.md  motor_drift_debugging.md  mpu6050.md  pid_control.md  serial_protocol.md  slam_overview.md  tf_frames.md
learnings/.obsidian/: workspace.json
motors/: motors.ino
scripts/: calibrate_drive.py  right_wheel_spinner.py
src/: auto_explorer.cpp  custom_lidar_node.cpp  diff_drive_controller.cpp  explorer.cpp  frontier_explorer.cpp  right_wheel_spinner.cpp
src/.claude/: settings.local.json
urdf/: robot_description.urdf
